syntax = "proto3";
package pastel.pastelid;

option go_package = "github.com/pastelnetwork/pastel/x/pastelid/types";

message PastelidEntry {
  string address = 1; 
  string idType = 2; 
  string pastelId = 3; 
  string pqKey = 4; 
  string signature = 5; 
  string timeStamp = 6; 
  uint64 version = 7; 
  
}

